# OpenGL-IMGUI

./: CMakeLists.txt  README.md  lamp.frag  lighting.vs  shadow.frag  texture.frag  texture.vs
Src/: Shader.h  imgui_impl_glfw_gl3.h  main.cpp
src/: Camera.h  Shader.h  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  main.cpp  mesh.h  model.h  shader.h  sphere.cpp  sphere.h
